@@ -6,4 +6,4 @@ HOSTOS = i386-sun-solaris
 
 TARGETCC = cc
 TARGETCXX = CC
-
+TARGETCXXFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include"
